--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@ DB_NAME=bf4i4aiupjmeu75cexyd
 DB_USER=utjhsbejjehli2uf
 DB_PASSWORD=jvc9UkL8YeyokqxKMPLW
 DB_HOST=bf4i4aiupjmeu75cexyd-mysql.services.clever-cloud.com
-DB_DIALECT=mysql
+DB_DIALECT=mysql2
  
