--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "express-async-handler": "^1.2.0",
     "js-search": "^2.0.0",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.1.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.9.2",
     "sequelize": "^6.37.1",
+    "sequelize-cli": "^6.6.2",
     "ts-node": "^10.9.1",
     "tsc": "^2.0.4",
     "yarn": "^1.22.19",
