--- a/.env
+++ b/.env
@@ -4,5 +4,12 @@ DB_NAME=bf4i4aiupjmeu75cexyd
 DB_USER=utjhsbejjehli2uf
 DB_PASSWORD=jvc9UkL8YeyokqxKMPLW
 DB_HOST=bf4i4aiupjmeu75cexyd-mysql.services.clever-cloud.com
-DB_DIALECT=mysql2
- 
+DB_DIALECT=mysql
+JWT_SECRET=abc123
+
+
+
+# NODE_ENV=development
+# PORT=10000
+# MONGO_URI=mongodb+srv://cbdev:clavemongodb@cluster0.ny18irn.mongodb.net/inv?retryWrites=true&w=majority
+# JWT_SECRET=abc123
